syntax = "proto3";
package pb;

service UploadService {

	rpc Upload(stream UploadReq) returns (UploadResp){}

    rpc Download(DownloadReq) returns (stream DownloadResp){}
 	
}   
message UploadReq{
    bytes data=1;
    string name=2;
}

message UploadResp{
}

message DownloadReq{
    uint32 batchSize=1;
    string name=2;
}

message DownloadResp{
    bytes data=1;
}




